Apply frontend 2.0 and report history updates
