# backend/main-backend/internal/models/models.go
@@ -25,8 +25,9 @@ type ChangePasswordRequest struct {
 }
 
 type AuthUser struct {
-	ID    string `json:"id"`
-	Email string `json:"email"`
+	ID        string `json:"id"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"created_at"`
 }
 
 type GuestInfo struct {
